# GitOut

./: .gitignore  LICENSE  README.md  pyproject.toml
gitout/: path.py  util.py
gitout/mirror/: __init__.py  _cli.py  clone.py  github.py  mirror.py  path.py  service.py
gitout/update/: __init__.py  _cli.py  walker.py
